Created recipes folderand pasta-alla-norma.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin Recipes</title>
-    </head>
-    <body style="font-family: sans-serif;">
-        <h1>Odin Recipes</h1>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Odin Recipes</title>
+</head>
+
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
+    <h1>Odin Recipes</h1>
+    <a href="./recipes/pasta-alla-norma.html">Recipe - Pasta alla norma</a>
+</body>
+
 </html>
