Created arancini and cannoli recipes + images upload

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
 <body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif">
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pasta-alla-norma.html">Recipe - Pasta alla norma</a>
+    <img src="./images/sicilian-cuisine.jpeg" alt="Sicilian cuisine">
+    <ul>
+        <li><a href="./recipes/pasta-alla-norma.html">Pasta alla Norma</a></li>
+        <li><a href="./recipes/arancini.html">Arancini</a></li>
+        <li><a href="./recipes/cannoli.html">Cannoli</a></li>
+    </ul>
 </body>
 
 </html>
